# Proyecto-POO

./: CMakeLists.txt  main.cpp
Controllers/: FileController.cpp  FileController.h
Data/: Students.txt
Models/Student/: Student.cpp  Student.h
Models/Subject/: Subject.cpp  Subject.h
Utils/: Tools.cpp  Tools.h  Validate.cpp  Validate.h
Views/: MainMenu.cpp  MainMenu.h
